--- a/.travis.yml
+++ b/.travis.yml
@@ -16,4 +16,4 @@ deploy:
   region: "us-east-2"
   app: "docker-react"
   env: "DockerReact-env"
-  bucket: "elasticbeanstalk-us-east-2-599115578538"
+  bucket_name: "nilkesh123"
