--- a/.travis.yml
+++ b/.travis.yml
@@ -14,6 +14,8 @@ deploy:
   env: "DockerReact-env"
   bucket_name: "elasticbeanstalk-us-east-2-570620410534"
   bucket_path: "docker-react"
+  # ⋮
+  edge: true
   on:
     branch: master
   access_key_id: $AWS_ACCESS_KEY
