--- a/.travis.yml
+++ b/.travis.yml
@@ -8,13 +8,13 @@ script:
     - docker run nilkeshsurana/docker npm run test -- --coverage
 
 deploy:
+  skip_cleanup: true
   provider: elasticbeanstalk
   region: "us-east-2"
   app: "docker-react"
   env: "DockerReact-env"
   bucket_name: "elasticbeanstalk-us-east-2-570620410534"
   bucket_path: "docker-react"
-  edge: true
   on:
     branch: master
   access_key_id: $AWS_ACCESS_KEY
