--- a/.travis.yml
+++ b/.travis.yml
@@ -8,7 +8,7 @@ script:
     - docker run nilkeshsurana/docker npm run test -- --coverage
 
 deploy:
-  skip_cleanup: true
+  edge: true
   provider: elasticbeanstalk
   region: "us-east-2"
   app: "docker-react"
